# DXServer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  note-week5.md
data/: database.json.in  engine.json  vorts1.json
nodejs/: calculateTime.js  debugEngine.js  main.js  package-lock.json  package.json  simulate.js
nodejs/module/: VoxClient.js  VoxEngine.js  index.js
note/: note-week2.md  note-week3.md  note-week4.md  note-week5.md  rpc-api.md
src/: CMakeLists.txt  CPUTaskHandler.cpp  CPUTaskHandler.h  Client.cpp  Client.h  Communicator.cpp  Communicator.h  DXGL.h  Engine.cpp  Engine.h  EventQueue.cpp  EventQueue.h  Experiment.cpp  Experiment.h  GPUTaskHandler.cpp  GPUTaskHandler.h  Main.cpp  QuarkGLHeader.h  QuarkScene.cpp  RequestHandler.cpp  RequestHandler.h  RequestQueue.cpp  RequestQueue.h  SceneHandler.cpp  SceneHandler.h  SceneLoader.cpp  SceneLoader.h  SceneManager.cpp  SceneManager.h  TaskHandler.cpp  TaskHandler.h  Workspace.cpp  Workspace.h
src/Common/: Resolve.cpp  Resolve.h
src/Communication/: MainServer.cpp  MainServer.h  WebSocketCommunicator.cpp  WebSocketCommunicator.h
src/Graphics/: DXGL.cpp  DXGL.h  Engine.cpp  Engine.h
src/Graphics/egl/: EGLWindow.cpp
src/Graphics/glfw/: GLFWHeader_Internal.h  GLFWSetup.cpp
src/Graphics/qt/: QtOpenGLWindow.cpp  QtOpenGLWindow.h
src/Loader/: Common.h  RegularGridRawBinary.cpp  RegularGridRawBinary.h  TetraGridRawBinary.cpp  TetraGridRawBinary.h
src/Serializer/: SceneDictionary.h
src/ToBeRemoved/: RequestHandler.h
src/Util/: Client.cpp  Client.h  Request.cpp  Request.h  Resolve.cpp  Resolve.h
test/: CMakeLists.txt  Main.cpp
